// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav /> can be \`fixed\` 1`] = `
<SideNav
  fixed={true}
  id="SideNav-mockId"
  trigger={
    <button
      className="trigger"
    >
      Show sidenav
    </button>
  }
>
  <button
    className="trigger hide-on-large-only sidenav-trigger"
    data-target="SideNav-mockId"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav sidenav-fixed"
    id="SideNav-mockId"
  />
</SideNav>
`;

exports[`<SideNav /> is \`fixed\` if no trigger is passed 1`] = `
<SideNav
  id="SideNav-mockId"
>
  <ul
    className="sidenav sidenav-fixed"
    id="SideNav-mockId"
  />
</SideNav>
`;

exports[`<SideNav /> renders 1`] = `
<SideNav
  id="SideNav-mockId"
  trigger={
    <button
      className="trigger"
    >
      Show sidenav
    </button>
  }
>
  <button
    className="trigger show-on-large sidenav-trigger"
    data-target="SideNav-mockId"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav"
    id="SideNav-mockId"
  />
</SideNav>
`;

exports[`<SideNav /> renders 2`] = `
<SideNav
  id="test"
  trigger={
    <button
      className="trigger"
    >
      Show sidenav
    </button>
  }
>
  <button
    className="trigger show-on-large sidenav-trigger"
    data-target="test"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav"
    id="test"
  />
</SideNav>
`;

exports[`<SideNav /> renders children 1`] = `
<SideNav
  id="SideNav-mockId"
  trigger={
    <button
      className="trigger"
    >
      Show sidenav
    </button>
  }
>
  <button
    className="trigger show-on-large sidenav-trigger"
    data-target="SideNav-mockId"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav"
    id="SideNav-mockId"
  >
    <span
      className="test-child"
    />
  </ul>
</SideNav>
`;
